# twat-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  start.sh
.sqlx/: query-391a647e8f224bd37e08370442e9134f5c7f827e21bc6fda3e9c1cf620814650.json  query-8e058f4295a5aa851c83864ca41de23fb9a392aca1298900ed18666208914833.json
migrations/: 20230928041801_initial.sql
src/: main.rs
