[package]
name = "twatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.9.5"
serenity = { version = "0.11", features = [
  "builder", 
  "cache", 
  "client", 
  "gateway", 
  "http", 
  "model", 
  "utils", 
  "rustls_backend",
  "time",
], default-features = false }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
